--- a/chat.css
+++ b/chat.css
@@ -1,7 +1,7 @@
 
 body {
-    /* background-color: #0b3d91; */
-    color: #f5f5f5;
+    /* background-color: skyblue;  */
+    color: #26dbdb;
     font-family: 'Arial', sans-serif;
 }
 
